recallable/tests/ui/model_fail_enum_recallable_variant.stderr
error: `#[recallable_model]` on enums requires assignment-only variants because it injects `Recall`
 --> tests/ui/model_fail_enum_recallable_variant.rs:9:6
  |
9 | enum InvalidModelNestedEnum {
  |      ^^^^^^^^^^^^^^^^^^^^^^
